--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>coffe_machine</name>
+  <name>coffee_machine</name>
   <version>0.0.0</version>
-  <description>The coffe_machine package</description>
+  <description>The coffee_machine package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
